# CombinatoryLogic

./: .gitignore  Combinator.hs  CombinatorQuoter.hs  Compiled.7z  README  README.md  default.nix  hie.yaml  ski.cabal
WPF_FrontEnd/: App.xaml  App.xaml.cs  ColoredCombinatorTextBlock.xaml  ColoredCombinatorTextBlock.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WPF_FrontEnd.csproj  WPF_FrontEnd.sln
WPF_FrontEnd/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
src/: Combinator.hs  CombinatorQuoter.hs
